Trying to fix books aligment on iphone (home page)

--- a/public/stylesheets/sass/_card.scss
+++ b/public/stylesheets/sass/_card.scss
@@ -124,6 +124,7 @@
     color: #003366;
     max-width: 230px;
     margin-bottom: 36px;
+    height: 285px;
 
     &--cover-image {
         width: 120px;
